--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 <body>
     <h1>ElderFlower</h1>
     <div id = "contents">
-     <div id ="title">
-         Howdy
-   
-     <span id="name" >friend</span>  </div>
-        <div id = "note">
-            take a look around
-        </div>
-    </div>
+     <div class ="message">Available:
+        <span id="stock"></span>
+     </div>
+
+     <div class="message" >Shipping:
+        <span id="shipping"></span>
+     </div>
+
+     <div id='colors'>
+      Color:
+     </div>
     <script src="style.js">
 
     </script>
