--- a/index.html
+++ b/index.html
@@ -6,16 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ElderFlower</h1>
-    <div id = "contents">
-     <div id ="title">
-         Howdy
-   
-     <span id="name" >friend</span>  </div>
-        <div id = "note">
-            take a look around
-        </div>
-    </div>
+    <h1>Travel Worthy</h1>
+    <div id="message" >welcome to site</div>
+
+
     <script src="style.js">
 
     </script>
