--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Travel Worthy</h1>
     <div id="message" >welcome to site</div>
 
+    <div id="hotelName" >Hotel Name: </div>
+    <div id= "rooms" >No of rooms vacant:</div>
 
     <script src="style.js">
 
