--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ElderFlower</h1>
-    <div id = "contents">
-     <div id ="title">
-         Howdy
-   
-     <span id="name" >friend</span>  </div>
-        <div id = "note">
-            take a look around
-        </div>
-    </div>
+    <div class="resultParas">
+        <p class="guesses"></p>
+        <p class="lastResult"></p>
+        <p class="lowOrHi"></p>
+      </div>
+
+      <label for="guessField">Enter a guess: </label><input type="text" id="guessField" class="guessField">
+<input type="submit" value="Submit guess" class="guessSubmit">
     <script src="style.js">
 
     </script>
