--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <p class="lowOrHi"></p>
       </div>
 
-      <label for="guessField">Enter a guess: </label><input type="text" id="guessField" class="guessField">
+      <label for="guessField">Enter a guess: </label>
+      <input type="text" id="guessField" class="guessField">
 <input type="submit" value="Submit guess" class="guessSubmit">
     <script src="style.js">
 
