--- a/index.html
+++ b/index.html
@@ -6,16 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ElderFlower</h1>
-    <div id = "contents">
-     <div id ="title">
-         Howdy
-   
-     <span id="name" >friend</span>  </div>
-        <div id = "note">
-            take a look around
-        </div>
-    </div>
+<button>start machine</button>
+<p>machine is stopped</p>
     <script src="style.js">
 
     </script>
