--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-
+    <ul>
+        <li>yo</li>
+    </ul>
+    <button onclick="createElem()" >click</button>
     <script src="style.js">
 
     </script>
