--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <label>select theme</label>
+    <select id = "theme">
+        
+        <option value="white">white theme</option>
+        <option value="black">black theme</option>
+    </select>
 
+    <h1>My Website</h1>
+    
     <script src="style.js">
 
     </script>
