--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-   
+    <label for="search">Search by contact name: </label>
+    <input id="search" type="text">
+    <button>Search</button>
+    
+    <p></p>
    
    
    
