--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Basic for loop example</title>
+    <style>
 
-   
-   
-   
-   
-   
-   <script src="style.js">
+    </style>
+  </head>
+  <body>
+
+  <p></p>
+
+
+    <script>
+    const cats = ['Bill', 'Jeff', 'Pete', 'Biggles', 'Jasmin'];
+    let info = 'My cats are called ';
+    const para = document.querySelector('p');
+
+    for(let i = 0; i < cats.length; i++) {
+      info += cats[i] + ', ';
+    }
+
+    para.textContent = info;
 
     </script>
-</body>
+
+  </body>
 </html>
